fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 #page-container {
     position: relative;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 body {
